# gemma-teach

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
crates/gt-core/: Cargo.toml
crates/gt-core/src/: backend.rs  ids.rs  knowledge.rs  lib.rs  llama_backend.rs  message.rs  model_fetch.rs  model_profile.rs  parser.rs  quality.rs  session.rs  session_event.rs  skills.rs  tool.rs
crates/gt-ffi/: Cargo.toml
crates/gt-ffi/src/: lib.rs
crates/gt-flows/: Cargo.toml
crates/gt-flows/examples/: record_trace.rs
crates/gt-flows/src/: artifacts.rs  class_plan.rs  context.rs  lib.rs  orchestrator.rs  step.rs  student_add.rs  student_edit.rs
crates/gt-flows/tests/: class_plan.rs  smoke_real_model.rs  student_add.rs  student_battery.rs  student_edit.rs  validate_homework_mapping.rs
crates/gt-flows/tests/fixtures/students/: amaya-rich.txt  diego-rich.txt  diego-soccer-rich.txt  elara-rich.txt  noor-rich.txt  sam-rich.txt
crates/gt-tools/: Cargo.toml
crates/gt-tools/src/: edit.rs  lib.rs  ocr.rs  path.rs  pdf.rs  read.rs  write.rs
crates/gt-tui/: Cargo.toml
crates/gt-tui/src/: app.rs  backend_select.rs  log.rs  main.rs  slash.rs  theme.rs  ui.rs
docs/: sdk-integration.md  tailor-decomposition.md  whitepaper.md
samples/: README.md
samples/chapters/: fractions-and-ratios.txt
samples/showcase/fractions-diego/: 02-diego-profile.md  02-diego-tags.json  04-master-class-notes.md  05-master-homework.md  06-diego-tailoring-plan.md  07-diego-tailored-homework.md  README.md
samples/showcase/photosynthesis-diego/: 02-diego-profile.md  02-diego-tags.json  03-ocr-source.txt  04-master-class-notes.md  05-master-homework.md  06-diego-tailoring-plan.md  07-diego-tailored-homework.md  README.md
skills/knowledge/: teaching-basics.md
skills/tools/: edit.md  read.md  write.md
templates/typst/: homework.typ  notes.typ
