[workspace]
resolver = "2"
members = [
    "crates/gt-core",
    "crates/gt-tools",
    "crates/gt-flows",
    "crates/gt-tui",
    "crates/gt-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Itay Inbar <itayinbar.me@gmail.com>"]
license = "MIT"
repository = "https://github.com/itayinbarr/gemma-teach"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "time", "io-util"] }
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
