[package]
name = "gt-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gt-core = { path = "../gt-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = "6"
walkdir = "2"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
